--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
+    "pdfkit": "^0.14.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
